@@ -123,6 +123,9 @@ Jason Ryan <jasonwryan@gmail.com>
 Sara Fauzia <sara@archlinux.us>
         archpkg fix.
 
+Paulo Almeida <paulo@diasalmeida.com>
+        elvi: priberam
+
 THANKS TO
 
 Brian Nelson           <bnelson@bloodclot.net>
