@@ -74,6 +74,7 @@ elvi.1sr.gz @mandir@/man1/opensearch.1sr.gz
 elvi.1sr.gz @mandir@/man1/pasearch.1sr.gz
 elvi.1sr.gz @mandir@/man1/piratebay.1sr.gz
 elvi.1sr.gz @mandir@/man1/pgpkeys.1sr.gz
+elvi.1sr.gz @mandir@/man1/priberam.1sr.gz
 elvi.1sr.gz @mandir@/man1/pubmed.1sr.gz
 elvi.1sr.gz @mandir@/man1/rae.1sr.gz
 elvi.1sr.gz @mandir@/man1/rfc.1sr.gz
