@@ -16,15 +16,15 @@ EXTRA_DIST = runtests elviwithouttests README COOKIES W.test		\
 	macports.test mathworld.test mininova.test musicbrainz.test	\
 	netbsd.test ntrs.test openbsd.test openports.test		\
 	opensearch.test pasearch.test piratebay.test pgpkeys.test	\
-	pubmed.test rae.test rfc.test rhyme.test rpmsearch.test		\
-	scholar.test scicom.test scitopia.test scirus.test scpan.test	\
-	scroogle.test slashdot.test slinuxdoc.test sourceforge.test	\
-	springer.test stack.test stockquote.test sunonesearch.test	\
-	thesaurus.test translate.test urban.test w3css.test		\
-	w3html.test w3link.test w3rdf.test wayback.test webster.test	\
-	wetandwild.test wikipedia.test woffle.test			\
-	worldwidescience.test yahoo.test yandex.test youtube.test	\
-	yubnub.test
+	priberam.test pubmed.test rae.test rfc.test rhyme.test		\
+	rpmsearch.test scholar.test scicom.test scitopia.test		\
+	scirus.test scpan.test scroogle.test slashdot.test		\
+	slinuxdoc.test sourceforge.test springer.test stack.test	\
+	stockquote.test sunonesearch.test thesaurus.test		\
+	translate.test urban.test w3css.test w3html.test w3link.test	\
+	w3rdf.test wayback.test webster.test wetandwild.test		\
+	wikipedia.test woffle.test worldwidescience.test yahoo.test	\
+	yandex.test youtube.test yubnub.test
 
 test:
 	./runtests
