@@ -1,0 +1,2 @@
+priberam equivalente
+produzindo
