@@ -1,3 +1,9 @@
+2011-08-09  Ian Beckwith  <ianb@erislabs.net>
+
+	* New elvi: priberam - search Portuguese dictionary.
+	  Author: Paulo Almeida <paulo@diasalmeida.com>
+	* Added test for priberam.
+
 2011-07-11  Ian Beckwith  <ianb@erislabs.net>
 
 	* netbsd: fix normal & mail search.
